--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -22,13 +21,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "typescript": "~3.7.2"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts ",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -51,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^6.8.0",
@@ -63,7 +62,10 @@
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
     "gh-pages": "^3.1.0",
-    "prettier": "2.2.1"
+    "jest": "^26.6.3",
+    "prettier": "2.2.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "^3.7.5"
   },
   "homepage": "http://GeorgianBadita.github.io/algorithm-visualizer"
 }
