--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "ts-heap": "^1.1.3"
