--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.11",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-logger": "^3.0.8",
     "bootstrap": "^4.5.3",
@@ -18,11 +19,14 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "ts-heap": "^1.1.3"
   },
   "scripts": {
