Start working on updated UI

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.18",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -17,8 +18,11 @@
     "bootstrap": "^4.5.3",
     "create-react-app": "^4.0.1",
     "evergreen-ui": "^5.1.2",
+    "npm": "^6.14.10",
     "rc-slider": "^9.7.1",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^16.13.1",
