--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^6.14.10",
     "rc-slider": "^9.7.1",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-animated-slider": "^2.0.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.0",
